testando e corrigindo endpoints de users, treino e dieta